overlays/prod/apps/cryptpad/old/ingress-gateway-sandbox.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sandbox-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: sandbox-http-port
      protocol: HTTP
    hosts:
      - sandbox.simplefxn.com
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: sandbox-https-port
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: sandbox.simplefxn.com
    hosts:
      - sandbox.simplefxn.com
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sandbox
  namespace: istio-system
spec:
  host: cryptpad.apps.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sandbox-vs
  namespace: istio-system
spec:
  hosts:
  - "sandbox.simplefxn.com"
  gateways:
  - sandbox-gateway
  http:
  - route:
    - destination:
        host: cryptpad.apps.svc.cluster.local
        port:
          number: 80
